test/parser.d/invalid/reassign2.souc.bad
main() = do
	x: Int = 4
	x = 5
	print $x
